# versa

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/: CD.yml  CI.yml  autofix.yml  deploy.yml  docker.yml  pr-checks.yml  quality.yml
src/: __main__.py  config.py  exceptions.py  log_setup.py  utils.py
src/cogs/: error_handler.py  message_commands.py  slash_commands.py  user_commands.py
src/database/: __init__.py
src/database/migrations/models/: 0_20260223163429_init.py
src/database/models/: __init__.py  guild.py
